--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
         </div>
         
         <div class="portfolio-item">
-            <h2>Business Cards</h2>
+            <h2>Business
+            </h2>
             <img src="images/Adam1.jpg" alt="Adam1">
             <img src="images/Adam2.jpg" alt="Adam2">
+            <img src="images/coffee1.jpg" alt="coffee1">
+            <img src="images/coffee2.jpg" alt="coffee2">
         </div>
 
         <div class="portfolio-item">
